--- a/views/backend/admin-file.ejs
+++ b/views/backend/admin-file.ejs
@@ -38,7 +38,7 @@
                                     <!-- small box -->
                                     <div class="small-box bg-success">
                                         <div class="inner">
-                                            <h3>53<sup style="font-size: 20px">%</sup></h3>
+                                            <h3><%-noofcat-%><sup style="font-size: 20px"></sup></h3>
 
                                             <p>Category</p>
                                         </div>
