Product pages added

--- a/views/backend/admin-file.ejs
+++ b/views/backend/admin-file.ejs
@@ -22,7 +22,7 @@
                                     <!-- small box -->
                                     <div class="small-box bg-info">
                                         <div class="inner">
-                                            <h3><%-x-%></h3>
+                                            <h3><%-noOfPage-%></h3>
 
                                             <p>Naigation Pages</p>
                                         </div>
@@ -54,7 +54,7 @@
                                     <!-- small box -->
                                     <div class="small-box bg-warning">
                                         <div class="inner">
-                                            <h3>44</h3>
+                                            <h3><%-noofcourse-%></h3>
 
                                             <p>Products</p>
                                         </div>
