--- a/views/backend/page-file.ejs
+++ b/views/backend/page-file.ejs
@@ -50,7 +50,7 @@
                               <td> <%=y.pageMetaDescrition%></td>
                               <td> <%=y.pageMetaKeyword%></td>
                               <td> <%=y.pageHeading%></td>
-                              <td> <%=y.pageDetails.slice(0, 20)%></td>%></td>
+                              <td> <%=y.pageDetails?.slice(0,20)%></td>
                               <td>
                                  <a class="btn btn-primary" href="/admin/page/edit-page/<%=y.pageUrl%>/">Edit</a>
                               </td>
